# ESIGELEATS

./: .gitignore  .pre-commit-config.yaml  ASSIGNMENT.md  Dockerfile  README.md  add_admin.py  app.py  eslint.config.js  package-lock.json  package.json  pyproject.toml  requirements.txt  sql.py  tailwind.config.js
.github/workflows/: ci-cd.yml
controllers/: comment_controller.py  ingredient_controller.py  recipe_controller.py  user_controller.py
models/: comment.py  ingredient.py  recipe.py  recipe_step.py  user.py
routes/: admin.py  api.py  auth.py  main.py  recipes.py  users.py
sql/: fill_recipes.sql  setupdb.sql
static/css/: output.css  styles.css
static/js/: add_comment.js  admin_insights.js  flash.js  notifications.js
templates/: home.html  layout.html  navbar.html
templates/admin/: dashboard.html  insights.html  recipes.html  recipes_validation.html  users.html
templates/auth/: login.html  register.html
templates/components/: buttons.html  notifications.html
templates/errors/: 401.html  403.html  403_profile_private.html  403_recipe_private.html  404.html  405.html  422.html  500.html  503.html  not_implemented.html
templates/recipe/: add_ingredient.html  list_recipes.html  recipe_form.html  view_recipe.html
templates/user/: edit_password.html  edit_profile.html  profile.html  user_favorite_recipes.html  user_rated_recipes.html  (+1 more)
tests/: conftest.py  test_admin_routes.py  test_api_routes.py  test_auth_routes.py  test_helpers.py  test_public_routes.py  test_recipe_routes.py  test_user_routes.py
utils/: decorators.py  errors.py  helpers.py
(+8 files in other folders)
