[project]
name = "esigeleats"
version = "0.1.0"
description = "Plateforme de partage de recettes (Flask + SQLite)"
requires-python = ">=3.11"
authors = [
  { name = "Cazaux Loris", email = "loris.cazaux@groupe-esigelec.org" }
]

dependencies = [
  "Flask==3.1.2",
  "Flask-Session",
  "sqlparse",
  "sqlalchemy",
  "termcolor",
]

[project.optional-dependencies]
dev = [
  "ruff",
  "pylint",
  "djlint",
  "pre-commit",
]

# RUFF
[tool.ruff]
src = ["."]
line-length = 100

extend-exclude = [
  ".git",
  ".venv",
  "venv",
  "__pycache__",
  "node_modules",
  "migrations",
  "static",
  "sql.py"
]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["controllers", "models", "routes", "utils", "sql", "app"]
known-third-party = ["flask", "flask_session", "sqlalchemy", "werkzeug", "termcolor", "sqlparse"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
skip-magic-trailing-comma = false

# PYLINT
[tool.pylint.main]
ignore = ["venv", ".venv", "build", "dist", "__pycache__"]
extension-pkg-whitelist = []
load-plugins = []

[tool.pylint.messages_control]
disable = [
  "R0903", # too-few-public-methods
  "C0301", # line too long (ruff s'en occupe)
]

[tool.pylint.format]
max-line-length = 100

[tool.pylint.basic]
good-names = ["i", "j", "k", "x", "y", "z", "db", "fp", "_", "id"]

# DJLINT
[tool.djlint]
profile = "jinja"
include = "templates/**/*.html"
ignore = "H006,H023"
